tests/ui/unstable-feature_bound/unstable_feature_bound_multi_attr.stderr
error[E0284]: type annotations needed: cannot satisfy `unstable feature: `feat_bar``
  --> $DIR/unstable_feature_bound_multi_attr.rs:33:5
   |
LL |     Bar::foo();
   |     ^^^ cannot satisfy `unstable feature: `feat_bar``
   |
note: required for `Bar` to implement `Foo`
  --> $DIR/unstable_feature_bound_multi_attr.rs:16:6
   |
LL | #[unstable_feature_bound(feat_bar, feat_koo)]
   | --------------------------------------------- unsatisfied trait bound introduced here
LL | #[unstable_feature_bound(feat_foo, feat_moo)]
LL | impl Foo for Bar {
   |      ^^^     ^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0284`.
